--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_security_demo
+spring.datasource.url=jdbc:mysql://localhost:3306/spr_bootstrap_new
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.mvc.hiddenmethod.filter.enabled=true
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.generate-ddl=false
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#
-#spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.mvc.hiddenmethod.filter.enabled=true
